# kokkos

./: BUILD.md  CMakeLists.txt  README.md
algorithms/src/: CMakeLists.txt
algorithms/unit_tests/: CMakeLists.txt
cmake/: Dependencies.cmake  KokkosConfig.cmake.in  KokkosCore_config.h.in  kokkosConfig.cmake.in  kokkos_arch.cmake  kokkos_build.cmake  kokkos_enable_options.cmake  kokkos_functions.cmake  kokkos_gtest.cmake  kokkos_preamble.cmake  kokkos_suggest_cuda_arch.cmake  kokkos_tpls.cmake  kokkos_tribits.cmake  kokkos_wrappers.cmake  tribits.cmake
cmake/compile_tests/: cuda_test.cc
containers/performance_tests/: CMakeLists.txt
containers/src/: CMakeLists.txt
containers/unit_tests/: CMakeLists.txt
core/: CMakeLists.txt
core/jit_test/: CMakeLists.txt  jit_fail.cpp  jit_pass.cpp
core/perf_test/: CMakeLists.txt
core/src/: CMakeLists.txt  Kokkos_CopyViews.hpp  Kokkos_ExecPolicy.hpp  Kokkos_View.hpp
core/src/Cuda/: Kokkos_Cuda_Team.hpp
core/src/OpenMP/: Kokkos_OpenMP_ViewCopyETIAvail.hpp  Kokkos_OpenMP_ViewCopyETIDecl.hpp
core/src/impl/: Kokkos_Error.cpp  Kokkos_HostThreadTeam.hpp
core/unit_test/: CMakeLists.txt
example/: CMakeLists.txt
example/build_cmake_in_tree/: CMakeLists.txt
example/build_cmake_installed/: CMakeLists.txt
example/feint/: CMakeLists.txt
example/fenl/: CMakeLists.txt
example/fixture/: CMakeLists.txt
example/global_2_local_ids/: CMakeLists.txt
example/grow_array/: CMakeLists.txt  grow_array.hpp
example/md_skeleton/: CMakeLists.txt
example/multi_fem/: CMakeLists.txt  Implicit.hpp  LinAlgBLAS.hpp  Nonlinear.hpp  TestHost.cpp
example/query_device/: CMakeLists.txt
example/sort_array/: CMakeLists.txt
example/tutorial/01_hello_world/: CMakeLists.txt
example/tutorial/01_hello_world_lambda/: CMakeLists.txt
example/tutorial/02_simple_reduce/: CMakeLists.txt
example/tutorial/02_simple_reduce_lambda/: CMakeLists.txt
example/tutorial/03_simple_view/: CMakeLists.txt
example/tutorial/03_simple_view_lambda/: CMakeLists.txt
example/tutorial/04_simple_memoryspaces/: CMakeLists.txt
example/tutorial/05_simple_atomics/: CMakeLists.txt
example/tutorial/06_simple_mdrangepolicy/: CMakeLists.txt
example/tutorial/Advanced_Views/01_data_layouts/: CMakeLists.txt
example/tutorial/Advanced_Views/02_memory_traits/: CMakeLists.txt
example/tutorial/Advanced_Views/03_subviews/: CMakeLists.txt
example/tutorial/Advanced_Views/04_dualviews/: CMakeLists.txt
example/tutorial/Advanced_Views/05_NVIDIA_UVM/: CMakeLists.txt
example/tutorial/Hierarchical_Parallelism/01_thread_teams/: CMakeLists.txt
example/tutorial/Hierarchical_Parallelism/01_thread_teams_lambda/: CMakeLists.txt
example/tutorial/Hierarchical_Parallelism/02_nested_parallel_for/: CMakeLists.txt
example/tutorial/Hierarchical_Parallelism/03_vectorization/: CMakeLists.txt
example/tutorial/Hierarchical_Parallelism/04_team_scan/: CMakeLists.txt
scripts/trilinos-integration/: config_promotion_test  white_cuda_env.sh
tpls/gtest/: CMakeLists.txt
tpls/gtest/gtest/: UnitTestMain.cpp
