TRIBITS_SUBPACKAGE(Gtest)

SET(GTEST_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

#always export kokkos_gtest for others to use
#even if testing is not activated directly for kokkos
TRIBITS_ADD_LIBRARY(
  kokkos_gtest
  SOURCES 
    ${GTEST_SOURCE_DIR}/gtest/gtest-all.cc
    ${GTEST_SOURCE_DIR}/gtest/UnitTestMain.cpp
  HEADERS ${GTEST_SOURCE_DIR}/gtest/gtest.h
  HEADERS_INSTALL_SUBDIR ${KOKKOS_HEADER_DIR}/gtest
)
TARGET_LINK_LIBRARIES(kokkos_gtest ${TEST_LINK_TARGETS})

TARGET_INCLUDE_DIRECTORIES(kokkos_gtest PUBLIC
  $<INSTALL_INTERFACE:${KOKKOS_HEADER_DIR}>
  $<BUILD_INTERFACE:${GTEST_SOURCE_DIR}>
)
TARGET_COMPILE_DEFINITIONS(kokkos_gtest PUBLIC "GTEST_HAS_PTHREAD=0")

IF(NOT KOKKOS_HAS_TRILINOS)
install(TARGETS kokkos_gtest
  EXPORT kokkos
  INCLUDES DESTINATION ${KOKKOS_HEADER_DIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
ENDIF()

TRIBITS_SUBPACKAGE_POSTPROCESS()
